# Indy7-with-camera

./: FUNDING.yml  README.md
.github/: FUNDING.yml
indy_description/launch/: indy_display.launch.py
indy_description/urdf/: generate_all_urdfs.sh  indy.ros2_control.xacro  indy.urdf.xacro  indy_macro.xacro
indy_description/urdf_files/: dual_icon3.urdf  icon3.urdf  icon7l.urdf  indy12.urdf  indy12_v2.urdf  indy7_eye.urdf  indyrp2.urdf  indyrp2_eye.urdf  indyrp2_v2.urdf  nuri20c.urdf  nuri3s.urdf  nuri4s.urdf  nuri7c.urdf  opti5.urdf
indy_driver/indy_driver/: indy_driver.py  servo_keyboard_input.py
indy_gazebo/: CMakeLists.txt
indy_gazebo/config/: gz_bridge.yaml
indy_gazebo/launch/: indy_gazebo.launch.py
indy_gazebo/worlds/: camera_world.sdf
indy_moveit/: CMakeLists.txt
indy_moveit/launch/: indy_moveit_real_robot.launch.py  moveit.launch.py
indy_moveit/moveit_config/: sensor_3d.yaml
indy_openvla/: CMakeLists.txt  Gripper_command.md  README.md  gripper_update.md  indy7_move_to_xyz.py  package.xml  yolo_grasping.py
indy_openvla/config/: indy_openvla_controllers.yaml
indy_openvla/launch/: indy_openvla.launch.py  indy_openvla_gazebo_base.launch.py
indy_openvla/models/Mustard_Bottle/: model.sdf
indy_openvla/urdf/: indy.ros2_control.xacro  indy.urdf.xacro  indy7.urdf  indy7_v2.urdf  indy_gripper.xacro  indy_macro.xacro  indy_openvla.urdf.xacro
